src/test/deca/context/invalid/intermediaire2/mots_reserves/15protected.deca
// Description:
// Test du mettre le mot réservé protected, en nom de variable.
//
// Resultats:
//  15protected.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int protected;
}